# bitmachine

./: README.md  bitmachine.cabal  cabal.sandbox.config
.cabal-sandbox/i386-windows-ghc-7.6.3-packages.conf.d/: bitmachine-0.0.0-525803540bfb650274bed1c0cd24b161.conf  hscolour-1.20.3-189c3bcc5c96d5f480a025715443184b.conf  package.cache
.cabal-sandbox/i386-windows-ghc-7.6.3/bitmachine-0.0.0/: BitMachine.hi
.cabal-sandbox/i386-windows-ghc-7.6.3/hscolour-1.20.3/Language/Haskell/: HsColour.hi
.cabal-sandbox/i386-windows-ghc-7.6.3/hscolour-1.20.3/Language/Haskell/HsColour/: ACSS.hi  ANSI.hi  Anchors.hi  CSS.hi  Classify.hi  ColourHighlight.hi  Colourise.hi  General.hi  HTML.hi  InlineCSS.hi  LaTeX.hi  MIRC.hi  Options.hi  Output.hi  TTY.hi
executable/: Main.hs
