name: bitmachine
version: 0.0.0
build-type: Simple
cabal-version: >= 1.18
copyright: 2014 Stephen Patel
license: MIT
synopsis:  The Bit Machine from ICFP

library
    if flag(documentation)
        build-depends: hscolour == 1.20.*
    default-language: Haskell2010
    exposed-modules: BitMachine
    hs-source-dirs: library
    build-depends: base
    
executable bitmachine
    default-language: Haskell2010
    hs-source-dirs: executable
    main-is: Main.hs
    build-depends: base, bitmachine
    
flag documentation
    default: False